@@ -436,6 +436,10 @@ Extension Modules
 Tests
 -----
 
+- Issue #15747: ZFS always returns EOPNOTSUPP when attempting to set the
+  UF_IMMUTABLE flag (via either chflags or lchflags); refactor affected
+  tests in test_posix.py to account for this.
+
 - Issue #15285: Refactor the approach for testing connect timeouts using
   two external hosts that have been configured specifically for this type
   of test.
